app/assets/stylesheets/pattern_table.scss
.single_pattern {
  padding: 2px 7px;
  border-radius: $border-radius;
  display: inline-block;
  vertical-align: middle;
  color: $black;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;

  &.not_pattern {
    background-color: rgba($dark_gray, $lower_opacity);
  }
  &.large_pattern {
    margin: 4px 2px;
    padding: 5px 20px;
    font-weight: 600;
  }
}

a.not_pattern {
  &:hover {
    color: #fff;
    background-color: rgba($dark_gray, 1);
  }
}

.restrict_full_width {
  max-width: $max_width;
  h3 {
    margin-top: 25px;
  }
  p {
    &:last-of-type {
      margin-bottom: 0;
    }
  }
}

.single_pattern {
  padding: 2px 7px;
  border-radius: $border-radius;
  display: inline-block;
  vertical-align: middle;
  color: $black;
  text-decoration: none;

  &.check-something {
    background: rgba($turqoise, $lower_opacity);
  }
  &.register-for-something {
    background: rgba($yellow, $lower_opacity);
  }
  &.tell-something {
    background: rgba($purple, $lower_opacity);
  }
  &.request-something {
    background: rgba($blue, $lower_opacity);
  }
  &.apply-for-something {
    background: rgba($red, $lower_opacity);
  }
  &.book-something {
    background: rgba($orange, $lower_opacity);
  }
  &.pay-for-something {
    background: rgba($dark_purple, $lower_opacity);
  }
  &.fg_brand {
    background: rgba($brand, $lower_opacity);
  }
}

#pattern_links {
  .single_pattern {
    margin: 4px 2px;
    padding: 5px 19px;
    font-weight: 600;

    &:hover {
      text-decoration: none;
    }
    &.check-something {
      &:hover {
        background: rgba($turqoise, 0.9);
        color: #fff;
      }
    }
    &.register-for-something {
      &:hover {
        background: rgba($yellow, 0.9);
        color: #fff;
      }
    }
    &.tell-something {
      &:hover {
        background: rgba($purple, 0.9);
        color: #fff;
      }
    }
    &.request-something {
      &:hover {
        background: rgba($blue, 0.9);
        color: #fff;
      }
    }
    &.apply-for-something {
      &:hover {
        background: rgba($red, 0.9);
        color: #fff;
      }
    }
    &.book-something {
      &:hover {
        background: rgba($orange, 0.9);
        color: #fff;
      }
    }
    &.pay-for-something {
      &:hover {
        background: rgba($dark_purple, 0.9);
        color: #fff;
      }
    }
    &.fg_brand {
      &:hover {
        background: rgba($brand, 0.9);
        color: #fff;
      }
    }
  }
}

.active_ {
  .fg_brand {
    background: rgba($brand, 1);
    color: #fff;
  }
}
.active_check {
  .check-something {
    background: rgba($turqoise, 1);
    color: #fff;
  }
}
.active_register {
  .register-for-something {
    background: rgba($yellow, 1);
    color: #fff;
  }
}
.active_tell {
  .tell-something {
    background: rgba($purple, 1);
    color: #fff;
  }
}
.active_request {
  .request-something {
    background: rgba($blue, 1);
    color: #fff;
  }
}
.active_apply {
  .apply-for-something {
    background: rgba($red, 1);
    color: #fff;
  }
}
.active_book {
  .book-something {
    background: rgba($orange, 1);
    color: #fff;
  }
}
.active_pay {
  .pay-for-something {
    background: rgba($dark_purple, 1);
    color: #fff;
  }
}

.pattern_table {
  padding-bottom: 0;
  padding-top: 0;
  margin-top: 25px;
  #life_event_filter {
    margin-bottom: 15px;
    float: right;
    label {
      text-align: right;
    }
    select {
      max-width: 300px;
      background: #fff;
      height: 35px;
    }
    a {
      margin-right: 15px;
    }

    @include mobile {
      float: none;
      label {
        text-align: left;
      }
    }
  }
  form {
    display: inline-block;
  }
  #clear_button {
    display: inline-block;
    margin-left: 10px;
  }
  .single_pattern {
    font-size: 0.75em;
  }
}

.link_like {
  color: $brand;
  text-decoration: underline;
}

#pattern_description {
  h2 {
    margin-top: 15px;
  }
}

